--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <!--    <link rel="stylesheet" href="/fa/css/font-awesome.min.css">-->
-    <link rel="stylesheet" href="./styles/css/pace.css">
+    <link rel="stylesheet" href="./public/bower_components/PACE/themes/blue/pace-theme-center-simple.css">
     <script type="text/javascript" src="./public/bower_components/PACE/pace.min.js"></script>
 </head>
 <body class="pace-big" data-version="1.0.0">
